try first test pip build
We still need to set up some metadata.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ sphinx==3.5.4  # newer versions display function names in the wrong color?
 sphinx_rtd_theme==0.5.2
 
 # dev tools
+build
 setuptools
 twine
 wheel
