work around ReadTheDocs bug

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 # docs
 sphinx==3.5.4  # newer versions display function names in the wrong color?
 sphinx_rtd_theme==0.5.2
+Jinja2<3.1  # https://github.com/readthedocs/readthedocs.org/issues/9038
 
 # dev tools
 build
