--- a/cli_docs/requirements.txt
+++ b/cli_docs/requirements.txt
@@ -1,4 +1,4 @@
 # docs
-sphinx==4.2.0  # newer versions display function names in the wrong color?
+sphinx>=5.0.0  # newer versions display function names in the wrong color?
 sphinx_rtd_theme==0.5.2
 Jinja2<3.1  # https://github.com/readthedocs/readthedocs.org/issues/9038
